feat: publish Xml code comments

--- a/src/Vertizens.TypeMapper/Vertizens.TypeMapper.csproj
+++ b/src/Vertizens.TypeMapper/Vertizens.TypeMapper.csproj
@@ -14,6 +14,7 @@
 	  <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
 	  <PublishRepositoryUrl>true</PublishRepositoryUrl>
 	  <IncludeSymbols>true</IncludeSymbols>
+	  <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
 	<ItemGroup>
