--- a/src/Vertizens.TypeMapper/Vertizens.TypeMapper.csproj
+++ b/src/Vertizens.TypeMapper/Vertizens.TypeMapper.csproj
@@ -15,6 +15,7 @@
 	  <PublishRepositoryUrl>true</PublishRepositoryUrl>
 	  <IncludeSymbols>true</IncludeSymbols>
 	  <GenerateDocumentationFile>true</GenerateDocumentationFile>
+	  <PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
 
 	<ItemGroup>
@@ -26,6 +27,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<None Include="..\..\README.md" Pack="true" PackagePath="\" />
+		<None Include="..\..\icon.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 </Project>
