feat: refactor to use expression builders

--- a/src/Vertizens.TypeMapper/Vertizens.TypeMapper.csproj
+++ b/src/Vertizens.TypeMapper/Vertizens.TypeMapper.csproj
@@ -28,6 +28,7 @@
 	<ItemGroup>
 		<None Include="..\..\README.md" Pack="true" PackagePath="\" />
 		<None Include="..\..\icon.png" Pack="true" PackagePath="\" />
+		<InternalsVisibleTo Include="Vertizens.TypeMapper.Tests"/>
 	</ItemGroup>
 
 </Project>
